feat(group-buy): get participants list api test success for prodict management(#9)